welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: ':' expected but identifier found.
def move(nbPas/Int,versLAvant:Boolean){
              ^Program:15: error: identifier expected but '}' found.
}
^